Re-enable automatic CI schedule every 5 minutes
- Uncomment the schedule section in CI workflow
- CI will now run automatically every 5 minutes in addition to push/PR triggers
- This will help monitor test stability and catch regressions quickly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,9 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  # schedule:
-    # # Run every 5 minutes (simplified schedule for better CI efficiency)
-    # - cron: '*/5 * * * *'  # Every 5 minutes
+  schedule:
+    # Run every 5 minutes (simplified schedule for better CI efficiency)
+    - cron: '*/5 * * * *'  # Every 5 minutes
 
 jobs:
   # Determine if scheduled run should proceed based on 5-minute schedule
